getting windstow parameters from katconf_ws, minor improvements to weather display and graphing

--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -7,11 +7,11 @@
                 <md-input-container md-no-float style="margin-left: 8px; padding: 0px; width: 40px"
                                     class="" title="Data Interval Grouping">
                     <input flex style="color: inherit;" placeholder="Interval" ng-model="vm.sensorGroupingInterval" type="number"
-                           ng-model-options="{ debounce: 750 }" ng-change="vm.historicalRangeChanged()">
+                           ng-model-options="{ debounce: 750 }" ng-change="vm.historicalRangeChanged()" min="0" max="1800">
                 </md-input-container>
                 <span style="margin-right: 8px;">seconds interval (on average), for the last</span>
                 <md-select md-theme="{{themePrimaryButtons}}" ng-model="vm.historicalRange"
-                           ng-change="vm.historicalRangeChanged()" style="min-width: 105px; padding: 0; margin-top: -5px;">
+                           ng-change="vm.historicalRangeChanged()" style="min-width: 105px; padding: 0;">
                     <md-option value="1h">1 Hour</md-option>
                     <md-option value="2h">2 Hours</md-option>
                     <md-option value="8h">8 Hours</md-option>
@@ -61,7 +61,8 @@
     </div>
     <div layout="column" style="margin-top: 8px;" flex>
         <md-toolbar class="md-toolbar-tools-medium md-whiteframe-z1" style="padding-right: 0;">
-            <span flex>Wind Speed</span>
+            <span flex ng-click="vm.hideWindChart = !vm.hideWindChart">Wind Speed</span>
+            <span style="font-size: 14px;">Wind Speed Limit: {{vm.windSpeedLimitLine}}m.s. - Wind Gust Limit: {{vm.windGustLimitLine}}m.s.</span>
             <md-menu md-theme="{{themePrimaryButtons}}" style="margin: 0">
                 <md-button class="md-icon-button inline-action-button" ng-click="$mdOpenMenu()"
                            style="margin-left: 0px; margin-right: 8px;">
@@ -69,21 +70,16 @@
                 </md-button>
                 <md-menu-content width="4" style="padding-left: 16px;">
                     <md-menu-item>
+                        <md-checkbox class="md-primary" ng-model="vm.hideWindChart" ng-init="vm.hideWindChart = false"
+                                     ng-click="$event.stopPropagation()">
+                            Hide Wind Chart
+                        </md-checkbox>
+                    </md-menu-item>
+                    <md-menu-item>
                         <md-checkbox class="md-primary" ng-model="vm.showWindGridLines" ng-change="vm.showWindOptionsChanged()"
                                      ng-click="$event.stopPropagation()">
                             Show Grid Lines
                         </md-checkbox>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()">
-                            <label style="font-weight: normal; margin-top: 4px;">Wind Speed Limit:</label>
-                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px; width: 60px"
-                                                class="md-primary" title="Wind Speed Limit Line">
-                                <input flex style="" placeholder="Minimum" ng-model="vm.windSpeedLimitLine"
-                                       ng-change="vm.showWindOptionsChanged()" type="number"
-                                       ng-model-options="{ debounce: 300 }">
-                            </md-input-container>
-                        </div>
                     </md-menu-item>
                     <md-menu-item>
                         <md-checkbox class="md-primary" ng-model="vm.useFixedWindYAxis"
@@ -118,18 +114,24 @@
                 </md-menu-content>
             </md-menu>
         </md-toolbar>
-        <div class="md-whiteframe-z1" flex style="padding: 8px; min-height: 235px; max-height: 235px; margin-bottom: 8px" layout="column">
+        <div class="md-whiteframe-z1" flex style="padding: 8px; min-height: 235px; margin-bottom: 8px" layout="column" ng-show="!vm.hideWindChart">
             <multi-line-chart flex redraw-function="vm.redrawWindChart" y-max="vm.yAxisWindMaxValue" hide-context-zoom="true"
                               y-min="vm.yAxisWindMinValue" mouse-over-tooltip="true" clear-function="vm.clearWindChart"></multi-line-chart>
         </div>
         <md-toolbar class="md-toolbar-tools-medium md-whiteframe-z1" style="padding-right: 0">
-            <span flex>Pressure, Humidity and Temperature</span>
+            <span flex ng-click="vm.hideWeatherChart = !vm.hideWeatherChart">Pressure, Humidity and Temperature</span>
             <md-menu md-theme="{{themePrimaryButtons}}" style="margin: 0">
                 <md-button class="md-icon-button inline-action-button" ng-click="$mdOpenMenu()"
                            style="margin-left: 0px; margin-right: 8px;">
                     <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
                 </md-button>
                 <md-menu-content width="4" style="padding-left: 16px;">
+                    <md-menu-item>
+                        <md-checkbox class="md-primary" ng-model="vm.hideWeatherChart" ng-init="vm.hideWeatherChart = false"
+                                     ng-click="$event.stopPropagation()">
+                            Hide Weather Chart
+                        </md-checkbox>
+                    </md-menu-item>
                     <md-menu-item>
                         <md-checkbox class="md-primary" ng-model="vm.showGridLines" ng-change="vm.showOptionsChanged()"
                                      ng-click="$event.stopPropagation()">
@@ -199,7 +201,7 @@
                 </md-menu-content>
             </md-menu>
         </md-toolbar>
-        <div class="md-whiteframe-z1" flex style="padding: 8px;" layout="column">
+        <div class="md-whiteframe-z1" flex style="padding: 8px; min-height: 600px;" layout="column" ng-show="!vm.hideWeatherChart">
             <multi-line-two-y-axis-chart flex redraw-function="vm.redrawChart" clear-function="vm.clearChart" class="sensor-list-multi-line-chart"
                                          remove-sensor-function="vm.removeSensorLine" y-left-max="vm.yAxisMaxValue"
                                          y-left-min="vm.yAxisMinValue" y-right-min="vm.yAxisRightMinValue" y-right-max="vm.yAxisRightMaxValue" mouse-over-tooltip="true"></multi-line-two-y-axis-chart>
