--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -14,7 +14,7 @@
             <md-button ng-click="vm.stowAll()" class="md-raised md-primary">Stow All</md-button>
             <md-button ng-click="vm.stopAll()" class="md-raised md-primary">Stop Observations</md-button>
             <md-button ng-click="vm.resumeOperations()" class="md-raised md-primary">Resume Operations</md-button>
-            <!--<md-button disabled ng-click="shutdownComputing()" class="md-raised md-primary">Shutdown Computing</md-button>-->
+            <md-button ng-click="vm.shutdownComputing()" class="md-raised md-primary">Shutdown Computing</md-button>
             <md-button ng-click="vm.toggleFloodLights()" class="md-raised md-primary">Switch Floodlights {{!vm.floodLightSensor.value? 'on' : 'off'}}</md-button>
         </section>
 
