--- a/app/process-control/process-control.html
+++ b/app/process-control/process-control.html
@@ -1,5 +1,5 @@
 <div flex layout="row" layout-align="center start" ng-controller="ProcessControlCtrl as vm" style="margin-left: 16px; margin-right: 16px; margin-bottom: 16px;">
-    <div flex ng-repeat="nm_key in objectKeys(vm.detailedProcesses) | orderBy:nm_key track by nm_key" style="margin: 16px; min-width: 320px; max-width: 320px">
+    <div flex ng-repeat="nm_key in $root.objectKeys(vm.detailedProcesses) | orderBy:nm_key track by nm_key" style="margin: 16px; min-width: 320px; max-width: 320px">
         <md-toolbar class="md-whiteframe-z1 md-toolbar-tools md-toolbar-tools-medium" layout="row" layout-align="start center"
                     ng-init="vm[nm_key + 'showDetails'] = true">
             <span flex ng-init="vm[nm_key + 'showProcList'] = true"
@@ -16,7 +16,7 @@
         </md-toolbar>
 
         <div class="md-whiteframe-z1" md-theme="{{themePrimaryButtons}}" ng-show="vm[nm_key + 'showProcList']">
-            <div ng-repeat="key in objectKeys(vm.detailedProcesses[nm_key]) | orderBy:key track by key"
+            <div ng-repeat="key in $root.objectKeys(vm.detailedProcesses[nm_key]) | orderBy:key track by key"
                  class="process-control-container">
                 <div flex ng-click="vm.detailedProcesses[nm_key][key].showDetail = !vm.detailedProcesses[nm_key][key].showDetail" role="heading"
                      ng-init="vm.detailedProcesses[nm_key][key].showDetail = false" class="process-control-bg-transition md-whiteframe-z1"
