--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -251,7 +251,7 @@
                               style="font-size: 14px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
                               title="{{item.value}}">{{item.value}}</span>
                     </div>
-                    <md-button title="Clear Alarm" class="inline-action-button" style="margin: 0"
+                    <md-button title="Cancel Known Alarm" class="inline-action-button" style="margin: 0"
                                ng-click="vm.cancelKnownAlarm(item); $event.stopPropagation();">
                         <span style="display: inherit" class="fa fa-remove"></span>
                     </md-button>
