--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -2,9 +2,10 @@
 
     <div flex layout="column" style="overflow: auto; padding-left: 16px; padding-right: 16px; padding-bottom: 4px;">
         <div ng-repeat="subarray in vm.subarrays | filter: (vm.subarray_id || '') && {id: vm.subarray_id} | orderBy:'id' track by $index" class="subarray-container md-whiteframe-z2" layout="row" layout-align="start"
-             style="min-width: 650px;" ng-mouseenter="subarray.mousehover = true" ng-mouseleave="subarray.mousehover = false" ng-init="subarray.mousehover = false" flex>
+             style="min-width: 650px; position: relative" ng-mouseenter="subarray.mousehover = true" ng-mouseleave="subarray.mousehover = false" ng-init="subarray.mousehover = false" flex>
 
             <div layout="column" layout-align="start" flex>
+
                 <md-toolbar md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}"
                             ng-class="{'md-hue-2': subarray.state !== 'inactive'}" class="md-whiteframe-z1"
                             layout="row" layout-align="center center" title="{{subarray.description}}" style="max-height: 50px; min-height: 50px;">
@@ -104,6 +105,10 @@
                        ng-click="vm.assignSelectedResources(subarray);" title="Assign Resources to Subarray">
                 <md-icon class="fa" md-font-icon="fa-chevron-left" style="width: auto; height: auto;"></md-icon>
             </md-button>
+
+            <div flex class="overlay-progress-circular" layout="row" layout-align="center center" ng-if="subarray.showProgress">
+                <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+            </div>
         </div>
     </div>
 
