pretty print json for schedule blocks

--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -37,7 +37,7 @@
                 </md-toolbar>
 
                 <div flex class="schedule-draft-data-list" style="padding: 0; direction: rtl" ng-class="{'maintenance-bg':vm.subarray.maintenance}">
-                    <div ng-repeat="item in vm.currentScheduleData = (vm.scheduleData | filter:{sub_nr:vm.subarray_id})" ng-click="vm.setSelectedSchedule(item);"
+                    <div ng-repeat="item in vm.currentScheduleData = (vm.scheduleData | filter:{sub_nr:vm.subarray_id}) track by $index" ng-click="vm.setSelectedSchedule(item);"
                          ng-class="{'selected-schedule-row': item.state !== 'ACTIVE' && item === vm.selectedSchedule,
                                 'schedule-row-executing': item.state === 'ACTIVE' && item !== vm.selectedSchedule,
                                 'schedule-row-executing-and-selected': item.state === 'ACTIVE' && item === vm.selectedSchedule}"
@@ -225,7 +225,7 @@
                 <div flex style="padding: 0" layout="column">
                     <div layout-fill flex class="schedule-block-script-window md-whiteframe-z1" layout="column"
                          ng-class="{'highlight-script-window': vm.selectedSchedule !== null, 'md-whiteframe-z2': vm.selectedSchedule === null}">
-                        <pre flex ng-if="vm.selectedSchedule !== null" style="margin: 0">{{vm.selectedSchedule | json:4}}</pre>
+                        <pre flex style="margin: 0" ng-if="vm.selectedSchedule !== null" ng-bind-html='vm.selectedSchedule | prettifyJSON'></pre>
                     </div>
                 </div>
             </div>
