moved floodlights toggle button to video display

--- a/app/video/video.html
+++ b/app/video/video.html
@@ -77,4 +77,8 @@
             </div>
         </div>
     </div>
+
+    <md-button ng-disabled="!vm.sensorValues.vds_flood_lights_on" ng-click="vm.toggleFloodLights()" class="md-raised md-primary floodlights-button" md-theme="{{themePrimaryButtons}}">
+        Switch Floodlights {{!vm.sensorValues.vds_flood_lights_on.value? 'on' : 'off'}}
+    </md-button>
 </div>
