--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -88,6 +88,10 @@
                             <span class="fa fa-warning error-text" style="font-size: 18px; margin-right: 4px;" ng-if="vm.isResourceFaulty(resource)" title="Resource Marked Faulty"></span>
                         </span>
                         <span flex style="margin-left: 4px; font-size:14px" ng-class="{'error-text':resource.state === 'faulty', 'maintenance-text':resource.maintenance}">{{resource.name}}</span>
+                        <md-button ng-show="subarray.maintenance && resource.maintenance" class="md-icon-button inline-action-button" ng-click="vm.restartMaintenanceDevice(subarray, resource); $event.stopPropagation()"
+                                   title="Restart Maintenance Device" style="margin: 0">
+                            <md-icon class="fa" md-font-icon="fa-refresh"></md-icon>
+                        </md-button>
                         <md-button class="md-icon-button inline-action-button" ng-click="vm.markResourceFaulty(resource); $event.stopPropagation()"
                                    title="Mark Resource As Faulty">
                             <md-icon class="fa" md-font-icon="fa-exclamation-circle"></md-icon>
@@ -136,13 +140,13 @@
                         <span class="fa fa-warning error-text" style="font-size: 18px; min-width: 18px;" ng-if="vm.isResourceFaulty(resource)" title="Resource Marked Faulty"></span>
                     </span>
                     <span flex style="font-size:18px; margin-left: 4px;" ng-class="{'error-text':resource.faulty, 'maintenance-text':resource.maintenance}">{{resource.name}}</span>
-                    <md-button class="md-icon-button inline-action-button" ng-click="vm.markResourceFaulty(resource); $event.stopPropagation()"
-                               title="Mark Resource As Faulty">
-                        <md-icon class="fa" md-font-icon="fa-exclamation-circle"></md-icon>
-                    </md-button>
                     <md-button class="md-icon-button inline-action-button" ng-click="vm.markResourceInMaintenance(resource); $event.stopPropagation()"
-                               title="Mark Resource in Maintenance">
+                               title="Mark Resource in Maintenance" style="margin: 0">
                         <md-icon class="fa" md-font-icon="fa-wrench"></md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button inline-action-button" ng-click="vm.markResourceFaulty(resource); $event.stopPropagation()"
+                               title="Mark Resource As Faulty" style="margin: 0">
+                        <md-icon class="fa" md-font-icon="fa-exclamation-circle"></md-icon>
                     </md-button>
                 </div>
             </div>
