--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -14,6 +14,7 @@
             <md-button ng-disabled="vm.waitingForRequestResult" ng-click="vm.stowAll()" class="md-raised md-primary">Stow All</md-button>
             <md-button ng-disabled="vm.waitingForRequestResult" ng-click="vm.stopAll()" class="md-raised md-primary">Stop Observations</md-button>
             <md-button ng-disabled="vm.waitingForRequestResult" ng-click="vm.resumeOperations()" class="md-raised md-primary">Resume Operations</md-button>
+            <md-button ng-disabled="vm.waitingForRequestResult" ng-click="vm.shutdownSPCorr()" class="md-raised md-primary">Shutdown SP & CORR</md-button>
             <md-button ng-disabled="vm.waitingForRequestResult" ng-click="vm.shutdownComputing()" class="md-raised md-primary">Shutdown Computing</md-button>
         </section>
 
