--- a/app/userlogs/userlogs.html
+++ b/app/userlogs/userlogs.html
@@ -6,11 +6,11 @@
                 <input class="fade-in search-input-box" type="search"
                        ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Userlogs..."/>
                 <md-button class="md-icon-button inline-action-button"
-                           ng-click="editUserLog(blank_ulog, my_userlogs, tags, $event)"
+                           ng-click="vm.editUserLog(vm.blank_ulog, vm.my_userlogs, vm.tags, $event)"
                            style="margin: 0 8px">
                     <md-icon class="fa" md-font-icon="fa-plus"></md-icon>
                 </md-button>
-                <md-button class="md-icon-button inline-action-button" ng-click="getMyUserLogs()" style="margin: 0">
+                <md-button class="md-icon-button inline-action-button" ng-click="vm.getMyUserLogs()" style="margin: 0">
                     <md-icon class="fa" md-font-icon="fa-refresh"></md-icon>
                 </md-button>
                 <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
@@ -42,7 +42,7 @@
                 </div>
             </md-toolbar>
 
-            <div ng-repeat="e_ulog in my_userlogs | regexSearch:vm.orderByFields:vm.q | orderBy:vm.orderBy.value:vm.orderBy.reverse"
+            <div ng-repeat="e_ulog in vm.my_userlogs | regexSearch:vm.orderByFields:vm.q | orderBy:vm.orderBy.value:vm.orderBy.reverse"
                           flex layout="row" layout-align="start center" class="user-log-row">
                 <span style="width: 120px">{{e_ulog.userlog_type}}</span>
                 <span style="width: 185px" ng-style="{'background': ulog.scolor}">
@@ -53,7 +53,7 @@
                 </span>
                 <span flex>{{e_ulog.userlog_content}}</span>
                 <md-button title="Edit User Log" class="inline-action-button" style="margin: 0"
-                           ng-click="getCompleteUserLog(e_ulog, my_userlogs, tags, $event); $event.stopPropagation();">
+                           ng-click="vm.getCompleteUserLog(e_ulog, vm.my_userlogs, vm.tags, $event); $event.stopPropagation();">
                     <span style="display: inherit" class="fa fa-edit"></span>
                 </md-button>
             </div>
@@ -65,7 +65,7 @@
                     <md-toolbar class="md-whiteframe-z1" layout="row" layout-align="start center">
                         <span style="margin-left: 16px" flex>Report Parameters:</span>
                         <div layout="row" layout-align="start center" md-theme="{{themePrimaryButtons}}" style="margin: 0 16px; font-size: 14px;">
-                            <md-select placeholder="Select User Log Type" ng-model="blank_query.userlog_type"
+                            <md-select placeholder="Select User Log Type" ng-model="vm.blank_query.userlog_type"
                                        style="width: 150px; margin: 0 8px">
                                 <md-option value="">All</md-option>
                                 <md-option value="shift_log">Shift Log</md-option>
@@ -78,7 +78,7 @@
                             <div layout="row" layout-align="center center" style="min-width: 220px; position: relative">
                                 <md-input-container flex md-no-float style="padding: 0;">
                                     <input flex type="text"
-                                           data-ng-model="blank_query.start_time" placeholder="Start Date"
+                                           data-ng-model="vm.blank_query.start_time" placeholder="Start Date"
                                            title="Start Date 'HH:mm:ss yyyy-MM-dd'"
                                            ng-click="vm.showDatePicker = !vm.showDatePicker; vm.showEndDatePicker = false; $event.stopPropagation()"/>
                                 </md-input-container>
@@ -89,15 +89,15 @@
                                 </md-button>
                                 <datetimepicker ng-show="vm.showDatePicker" ng-init="vm.showDatePicker = false"
                                                 class="datepickerMenu md-whiteframe-z1"
-                                                data-ng-model="blank_query.start_time" style="position: absolute; left: 0; top: 34px"
+                                                data-ng-model="vm.blank_query.start_time" style="position: absolute; left: 0; top: 34px"
                                                 data-datetimepicker-config="{ dropdownSelector: &apos;#dropdown2&apos; }"
-                                                data-on-set-time="vm.showDatePicker = false; vm.onTimeSet(blank_query.start_time, ulog, 'start_time')"></datetimepicker>
+                                                data-on-set-time="vm.showDatePicker = false; vm.onTimeSet(vm.blank_query.start_time, ulog, 'start_time')"></datetimepicker>
                             </div>
                             <!--<span style="margin: 0 8px"></span>-->
                             <div layout="row" layout-align="center center" style="min-width: 220px;  position: relative">
                                 <md-input-container flex md-no-float style="padding: 0;">
                                     <input flex type="text"
-                                           data-ng-model="blank_query.end_time" placeholder="End Date"
+                                           data-ng-model="vm.blank_query.end_time" placeholder="End Date"
                                            title="End Date 'HH:mm:ss yyyy-MM-dd'"
                                            ng-click="vm.showEndDatePicker = !vm.showEndDatePicker; vm.showDatePicker = false; $event.stopPropagation()"/>
                                 </md-input-container>
@@ -107,18 +107,18 @@
                                     <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
                                 </md-button>
                                 <datetimepicker ng-show="vm.showEndDatePicker" ng-init="vm.showEndDatePicker = false"
-                                                data-ng-model="blank_query.end_time" style="position: absolute; left: 0; top: 34px"
+                                                data-ng-model="vm.blank_query.end_time" style="position: absolute; left: 0; top: 34px"
                                                 class="datepickerMenu md-whiteframe-z1"
                                                 data-datetimepicker-config="{ dropdownSelector: &apos;#dropdown4&apos; }"
-                                                data-on-set-time="vm.showEndDatePicker = false; vm.onTimeSet(blank_query.end_time, ulog, 'end_time')"></datetimepicker>
+                                                data-on-set-time="vm.showEndDatePicker = false; vm.onTimeSet(vm.blank_query.end_time, ulog, 'end_time')"></datetimepicker>
                             </div>
-                            <md-button class="add-tab md-primary md-raised" ng-click="queryUserlogs(event, blank_query)"
+                            <md-button class="add-tab md-primary md-raised" ng-click="vm.queryUserlogs(event, vm.blank_query)"
                                        style="margin-right: 0;">Generate Report
                             </md-button>
                         </div>
                     </md-toolbar>
                 </div>
-                <div flex layout="column" style="width:100%" ng-show="report_userlogs.length > 0">
+                <div flex layout="column" style="width:100%" ng-show="vm.report_userlogs.length > 0">
                     <md-list>
                         <md-list-item>
                             <div class="md-list-item-text" style="font-size: 18px; font-weight: bold" layout="row" flex>
@@ -128,7 +128,7 @@
                                 <span style="width: 150px">Userlog Content</span>
                             </div>
                         </md-list-item>
-                        <md-list-item ng-repeat="rlog in report_userlogs | filter:blank_query.userlog_type">
+                        <md-list-item ng-repeat="rlog in vm.report_userlogs | filter:vm.blank_query.userlog_type">
                             <md-divider></md-divider>
                             <div class="md-list-item-text" style="font-size:small" flex
                                  layout="row">
